# losc

./: .gitignore  CMakeLists.txt  README.md  README.rst  correction.cpp  correction.h  curvature.h  curvature_v1.cpp
docs/: .buildinfo  CMakeLists.txt  Doxyfile.in  c_losc.html  genindex.html  index.html  installation.html  introduction.html  losc.html  objects.inv  psi4_api_ref__psi4_losc.html  psi4_api_ref__psi4_losc__scf.html  psi4_losc.html  py-modindex.html  py_losc.html  search.html  searchindex.js
docs/.doctrees/: c_losc.doctree  environment.pickle  index.doctree  installation.doctree  introduction.doctree  losc.doctree  psi4_api_ref__psi4_losc.doctree  psi4_api_ref__psi4_losc__scf.doctree  psi4_losc.doctree  py_losc.doctree
docs/_modules/: index.html
docs/_modules/psi4_losc/: losc_options.html  psi4_losc.html  scf.html
docs/_modules/py_losc/: py_losc.html
docs/_sources/: c_losc.rst.txt  installation.rst.txt  introduction.rst.txt  py_losc.rst.txt
docs/doxygen/: Doxyfile.in  DoxygenLayout.xml
docs/doxygen/c_losc/html/: annotated.html  annotated.js  classes.html  correction_8h.html  correction_8h.js  correction_8h_source.html  curvature_8h.html  curvature_8h.js  curvature_8h_source.html  dir_381de07644c13531ab49759878f1b148.html  dir_381de07644c13531ab49759878f1b148.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  graph_legend.html  index.html  local__occupation_8h.html  local__occupation_8h.js  local__occupation_8h_source.html  localization_8h.html  localization_8h.js  localization_8h_source.html  losc_8h.html  losc_8h_source.html  matrix_8h.html  matrix_8h.js  matrix_8h_source.html  navtreedata.js  navtreeindex0.js  structLoscCurvatureBase-members.html  structLoscCurvatureBase.html  structLoscCurvatureBase.js  structLoscCurvatureV1-members.html  structLoscCurvatureV1.html  (+10 more)
docs/doxygen/c_losc/xml/: correction_8h.xml  curvature_8h.xml  dir_381de07644c13531ab49759878f1b148.xml  dir_d44c64559bbebec7f509842c48db8b23.xml  index.xml  local__occupation_8h.xml  localization_8h.xml  losc_8h.xml  matrix_8h.xml  structLoscCurvatureBase.xml  structLoscCurvatureV1.xml  structLoscCurvatureV2.xml  structLoscLocalizerBase.xml  structLoscLocalizerV2.xml
docs/doxygen/losc/html/: annotated.html  annotated.js  classes.html  classlosc_1_1CurvatureBase-members.html  classlosc_1_1CurvatureBase.html  classlosc_1_1CurvatureBase.js  classlosc_1_1CurvatureBase__inherit__graph.map  classlosc_1_1CurvatureBase__inherit__graph.md5  classlosc_1_1CurvatureV1-members.html  classlosc_1_1CurvatureV1.html  classlosc_1_1CurvatureV1.js  classlosc_1_1CurvatureV1__inherit__graph.map  classlosc_1_1CurvatureV1__inherit__graph.md5  classlosc_1_1CurvatureV2-members.html  classlosc_1_1CurvatureV2.html  classlosc_1_1CurvatureV2.js  classlosc_1_1CurvatureV2__inherit__graph.map  classlosc_1_1CurvatureV2__inherit__graph.md5  classlosc_1_1DFAInfo-members.html  classlosc_1_1DFAInfo.html  classlosc_1_1DFAInfo.js  classlosc_1_1LocalizerBase-members.html  classlosc_1_1LocalizerBase.html  classlosc_1_1LocalizerBase.js  classlosc_1_1LocalizerBase__inherit__graph.map  classlosc_1_1LocalizerBase__inherit__graph.md5  classlosc_1_1LocalizerV2-members.html  classlosc_1_1LocalizerV2.html  classlosc_1_1LocalizerV2.js  classlosc_1_1LocalizerV2__inherit__graph.map  classlosc_1_1LocalizerV2__inherit__graph.md5  (+55 more)
docs/doxygen/losc/xml/: index.xml  (+20 more)
docs/source/: conf.py  index.rst  installation.rst  introduction.rst  losc.rst  psi4_api_ref__psi4_losc__scf.rst  psi4_losc.rst  py_losc.rst
docs/sphinx/: c_losc.rst  c_losc.rst.in  conf.py  installation.rst  losc.rst  losc.rst.in  py_losc.rst
docs_source/: CMakeLists.txt
docs_source/doxygen/: Doxyfile.in
docs_source/sphinx/: c_losc.rst  conf.py  index.rst  installation.rst  introduction.rst  losc.rst  psi4_api_ref__psi4_losc.rst  psi4_losc.rst
localization/: CMakeLists.txt
localization/src/: localization.cpp  localization.h  localization_losc2.cpp
localization/test/: CMakeLists.txt  test.cpp
losc/: CMakeLists.txt
losc/doc/: Doxyfile
losc/include/losc/: correction.h  curvature.h  exception.h  local_occupation.h  localization.h  losc.h
losc/interface/c_losc/: correction.cpp  correction.h  curvature.cpp  curvature.h  local_occupation.cpp  local_occupation.h  localization.cpp  localization.h  losc.cpp  losc.h  matrix.cpp  matrix.h  matrix_internal.h
losc/interface/psi4_losc/: psi4_losc.py
losc/interface/py_losc/: export_correction.cpp  export_correction.h  export_curvature.cpp  export_curvature.h  export_local_occupation.cpp  export_local_occupation.h  export_localization.cpp  export_localization.h  export_losc.cpp  export_py_losc.cpp  export_py_losc.h  py_losc.py
losc/src/: blas_base.h  correction.cpp  correction.h  curvature.cpp  curvature.h  curvature_v1.cpp  curvature_v2.cpp  eigen_def.h  eigen_helper.h  exception.cpp  exception.h  local_occupation.cpp  local_occupation.h  localization.cpp  localization.h  localization_v2.cpp  matrix.cpp  matrix.h
losc/test/: correction_test.cpp  curvature_test.cpp  local_occ_test.cpp  localization_test.cpp  matrix_checker_test.cpp  matrix_io.cpp  test.cpp
src/c_losc/: CMakeLists.txt  correction.cpp  curvature.cpp  local_occupation.cpp  localization.cpp  matrix.cpp  matrix_impl.hpp
src/losc/: CMakeLists.txt  correction.cpp  curvature.cpp  curvature_v1.cpp  curvature_v2.cpp  eigen_helper.hpp  exception.cpp  local_occupation.cpp  localization.cpp  localization_v2.cpp
src/py_losc/: CMakeLists.txt  __init__.py  export_correction.cpp  export_correction.hpp  export_curvature.cpp  export_curvature.hpp  export_local_occupation.cpp  export_local_occupation.hpp  export_localization.cpp  export_localization.hpp  export_py_losc.cpp  export_py_losc.hpp  py_losc.py
tests/losc/: CMakeLists.txt  correction_test.cpp  curvature_test.cpp  local_occ_test.cpp  localization_test.cpp  matrix_checker_test.cpp  matrix_helper.cpp  matrix_helper.hpp  matrix_io.cpp  matrix_io.hpp
(+219 files in other folders)
